--- a/index.html
+++ b/index.html
@@ -8,12 +8,33 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
-	<title>Nina Carducci</title>
+	<title>Nina Carducci - Photographe</title>
 	<meta name="description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.">
 	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
+	<!-- JSON-LD Schema.org -->
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci",
+			"url": "https://rikodust.github.io/Site_Nina_Carducci/",
+			"image": "https://rikodust.github.io/Site_Nina_Carducci/assets/images/nina_carducci.webp",
+			"description": "Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.",
+			"telephone": "05 56 67 78 89",
+			"openingHours": "Mo-Fr 10:00-19:00",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"priceRange": "$$"
+		}
+	</script>
 </head>
 <body>
 <header class="top-header">
@@ -59,7 +80,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci">
+		<img src="./assets/images/nina_carducci.webp" alt="Portrait of Nina Carducci">
 	</div>
 	<article id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
