--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
 	<meta charset="UTF-8">
 	<title>Nina Carducci - Photographe</title>
 	<meta name="description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.">
+	<meta name="author" content="Nina Carducci, Photographe à Bordeaux">
+	<meta name="keywords" content="Photographe Bordeaux, Nina Carducci, Shooting photo, Retouches photos, Album photos">
 	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
+	<!-- Elements OpenGraph -->
+	 <meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
+	 <meta property="og:description" content="Sublimez vos moments grâce à Nina Carducci, photographe sur la ville de Bordeaux">
+	 <meta property="og:image" content="https://rikodust.github.io/Site_Nina_Carducci/images/nina_carducci.webp">
+	 <meta property="og:type" content="website">
+	 <meta property="og:url" content="https://rikodust.github.io/Site_Nina_Carducci/">
+	 <meta property="og:site_name" content="Nina Carducci Photographe">
+	 <meta property="og:locale" content="fr_FR">
+	<!-- Elements Twitter Cards -->
+	 <meta name="twitter:card" content="summary">
+	 <meta name="twitter:title" content="Nina Carducci, Photographe à Bordeaux">
+	 <meta name="twitter:description" content="Photographe Bordeaux, Nina Carducci, Shooting photo, Retouches photos, Album photos">
+	 <meta name="twitter:image" content="https://rikodust.github.io/Site_Nina_Carducci/images/nina_carducci.webp">
 	<!-- JSON-LD Schema.org -->
 	<script type="application/ld+json">
 		{
@@ -68,11 +83,11 @@
 				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Wedding ceremony" loading="lazy">
 			</div>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="Previous slide">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
 		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" aria-label="Next slide">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Next</span>
 		</button>
