fix(project): corrections and adjustments post-defense

--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 	<title>Nina Carducci - Photographe</title>
 	<meta name="description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.">
 	<meta name="author" content="Nina Carducci, Photographe à Bordeaux">
-	<meta name="keywords" content="Photographe Bordeaux, Nina Carducci, Shooting photo, Retouches photos, Album photos">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
+
 	<!-- Elements OpenGraph -->
 	 <meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
 	 <meta property="og:description" content="Sublimez vos moments grâce à Nina Carducci, photographe sur la ville de Bordeaux">
-	 <meta property="og:image" content="https://rikodust.github.io/Site_Nina_Carducci/images/nina_carducci.webp">
+	 <meta property="og:image" content="https://rikodust.github.io/Site_Nina_Carducci/assets/images/nina_carducci.webp">
 	 <meta property="og:type" content="website">
 	 <meta property="og:url" content="https://rikodust.github.io/Site_Nina_Carducci/">
 	 <meta property="og:site_name" content="Nina Carducci Photographe">
 	 <meta property="og:locale" content="fr_FR">
+
 	<!-- Elements Twitter Cards -->
 	 <meta name="twitter:card" content="summary">
 	 <meta name="twitter:title" content="Nina Carducci, Photographe à Bordeaux">
 	 <meta name="twitter:description" content="Photographe Bordeaux, Nina Carducci, Shooting photo, Retouches photos, Album photos">
-	 <meta name="twitter:image" content="https://rikodust.github.io/Site_Nina_Carducci/images/nina_carducci.webp">
+	 <meta name="twitter:image" content="https://rikodust.github.io/Site_Nina_Carducci/assets/images/nina_carducci.webp">
+
 	<!-- JSON-LD Schema.org -->
 	<script type="application/ld+json">
 		{
@@ -37,7 +38,8 @@
 			"name": "Nina Carducci",
 			"url": "https://rikodust.github.io/Site_Nina_Carducci/",
 			"image": "https://rikodust.github.io/Site_Nina_Carducci/assets/images/nina_carducci.webp",
-			"description": "Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.",
+			"description": "Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné.
+			Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.",
 			"telephone": "05 56 67 78 89",
 			"openingHours": "Mo-Fr 10:00-19:00",
 			"address": {
@@ -50,6 +52,7 @@
 			"priceRange": "$$"
 		}
 	</script>
+
 </head>
 <body>
 <header class="top-header">
@@ -121,8 +124,8 @@
 	</div>
 	<div class="quote">
 		<figure>
-			<blockquote>
-				<h2 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h2>
+			<blockquote class="quote__text">
+			Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
@@ -166,8 +169,8 @@
 </section>
 <div class="quote">
 	<figure>
-		<blockquote>
-			<h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
+		<blockquote class="quote__text">
+		De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie
 		</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
@@ -193,5 +196,6 @@
 	</div>
 </section>
 </main>
+<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 </body>
 </html>
